# stomp_motion_planner_icra2011

./: .gitignore  README.txt
chomp_motion_planner/: CMakeLists.txt  mainpage.dox  manifest.xml
chomp_motion_planner/config/: chomp_pr2_right_arm.yaml
chomp_motion_planner/include/chomp_motion_planner/: chomp_collision_point.h  chomp_collision_space.h  chomp_cost.h  chomp_cost_server.h  chomp_optimizer.h  chomp_parameters.h  chomp_planner_node.h  chomp_robot_model.h  chomp_trajectory.h  chomp_utils.h  multivariate_gaussian.h
chomp_motion_planner/launch/: chomp_cost_server.launch  chomp_node.launch  chomp_node_debug.launch
chomp_motion_planner/src/: .gitignore  chomp_collision_point.cpp  chomp_collision_space.cpp  chomp_cost.cpp  chomp_cost_server.cpp  chomp_optimizer.cpp  chomp_parameters.cpp  chomp_planner_node.cpp  chomp_robot_model.cpp  chomp_trajectory.cpp  treefksolverjointposaxis.cpp  treefksolverjointposaxis_partial.cpp
policy_learning/: stack.xml
policy_learning/bspline/: Makefile
policy_learning/dmp_motion_controller/: .gitignore  CMakeLists.txt  TODO  controller_plugins.xml  mainpage.dox  manifest.xml
policy_learning/dmp_motion_controller_test/: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml
policy_learning/dmp_motion_generation/: CMakeLists.txt  TODO  mainpage.dox  manifest.xml
policy_learning/dmp_motion_generation/config/: directory_params.yaml  dmp_params.yaml
policy_learning/dmp_motion_generation/include/dmp_motion_generation/: constants.h  dmp_debug.h  dynamic_movement_primitive.h  math_helper.h  parameters.h  trajectory.h  transformation_system.h
policy_learning/dmp_motion_generation/msg/: DynamicMovementPrimitive.msg  TransformationSystem.msg
policy_learning/dmp_motion_generation/src/: .gitignore  dmp_bag2mrd_main.cpp  dmp_debug.cpp  dmp_test_main.cpp  dmp_test_memory_leaks_main.cpp  dynamic_movement_primitive.cpp  math_helper.cpp  parameters.cpp  trajectory.cpp  transformation_system.cpp
policy_learning/dmp_motion_generation_test/: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml
policy_learning/dmp_motion_gui/: .gitignore  mainpage.dox  manifest.xml
policy_learning/dmp_motion_learner/: .gitignore  CMakeLists.txt  colors.txt  colors_red_blue_afternoon.txt  colors_red_blue_evening.txt  colors_red_blue_morning.txt  colors_red_blue_night.txt  colors_red_blue_yellow.txt  mainpage.dox  manifest.xml
policy_learning/dmp_motion_learner/config/: cloud_filter_parameter.yaml
policy_learning/dmp_motion_learner/include/dmp_motion_learner/: dmp_motion_learner.h  dmp_trajectory_executer.h
policy_learning/dmp_motion_learner/launch/: cloud_filter_node.launch  cmvision.launch  cmvision_calibrate_colors.launch  directory_params.yaml  dmp_motion_learner.launch  dmp_motion_learner_debug.launch  dmp_motion_learner_test.launch  dmp_motion_learner_test.test  dmp_motion_learner_test.yaml  empty_world_gdb.launch  empty_world_valgrind.launch  gazebo_all.launch  gazebo_gdb.launch  gazebo_valgrind.launch  perception.launch
policy_learning/dmp_motion_learner/scripts/: calibrateColors  callLearnCartesianAndJointSpaceDMPService  callLearnCartesianSpaceDMPService  callLearnCartesianSpaceDMPServicePhantom  callLearnJointSpaceDMPService  callLearnJointSpaceDMPServicePhantom  callPrintDMPLibraryService  plotAngularVelocities  plotJointPositions  plotJointVelocities  plotLinearVelocities  plotNullspaceTerm  plotOrientation  plotPosition  recordJointStates
policy_learning/dmp_motion_learner/src/: .gitignore  cloud_filter_node.cpp  dmp_bag2mrd_main.cpp  dmp_motion_learner.cpp  dmp_motion_learner_node.cpp  dmp_test_memory_leaks_main.cpp  dmp_trajectory_executer.cpp  dmp_trajectory_executer_node.cpp
policy_learning/dmp_motion_learner/srv/: .gitignore  ExecuteCLMCTrajectory.srv  LearnCartesianSpaceDMP.srv  LearnDualCartesianSpaceDMP.srv  LearnJointSpaceDMP.srv
policy_learning/dmp_motion_learner/test/: dmp_motion_learner_test.cpp
policy_learning/dmp_motion_learner/test_library/dmp_test_debug/: .gitignore
policy_learning/lwr/: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml
policy_learning/lwr/include/lwr/: lwr.h  parameters.h
policy_learning/lwr/launch/: lwr_test.launch  lwr_test.test  lwr_test.yaml  lwr_test_debug.test
policy_learning/lwr/matlab/: lwr_plot_test_results.m
policy_learning/lwr/msg/: Model.msg
policy_learning/lwr/src/: lwr.cpp  parameters.cpp
policy_learning/lwr/test/: lwr_test.cpp
policy_learning/policy_improvement/: CMakeLists.txt  manifest.xml
policy_learning/policy_improvement_loop/: CMakeLists.txt  manifest.xml
policy_learning/policy_improvement_test/: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml
policy_learning/policy_improvement_utilities/: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml
policy_learning/policy_library/: CMakeLists.txt  manifest.xml
policy_learning/pr2_tasks/: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml  microstrain_3dmgx2.launch  pool_task_howto.txt  task_plugins.xml
policy_learning/pr2_tasks_transforms/: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml
policy_learning/stomp_motion_planner/: CMakeLists.txt  manifest.xml
policy_learning/task_recorder/: .gitignore  CMakeLists.txt  manifest.xml
policy_learning/task_recorder/include/task_recorder/: accelerometer_states_recorder.h  accumulator.h  imu_states_recorder.h  joint_states_recorder.h  point_cloud_recorder.h  pressure_states_recorder.h  tactile_states_recorder.h  task_recorder.h  task_recorder_client.h  task_recorder_io.h  task_recorder_utilities.h
policy_learning/task_recorder/launch/: task_recorder.yaml
policy_learning/task_recorder/src/: accelerometer_states_recorder.cpp  accumulator.cpp  imu_converter_node.cpp  imu_states_recorder.cpp  joint_states_recorder.cpp  point_cloud_recorder.cpp  pressure_states_recorder.cpp  tactile_states_recorder.cpp  task_recorder_node.cpp
policy_learning/task_recorder/srv/: StopRecordingAccelerometerStates.srv  StopRecordingJointStates.srv  StopRecordingPressureStates.srv  StopRecordingTactileStates.srv
stomp_motion_planner/config/: params.yaml
(+237 files in other folders)
